# cargo-invoke

./: Cargo.toml  README.md  dynamic.rs
src/: error.rs  lib.rs  main.rs  mod.rs
