[package]
name = "cargo-invoke"
version = "0.1.0"
edition = "2021"

[lib]
name = "cargo_invoke"
path = "src/lib.rs"

[[bin]]
name = "cargo-invoke"
path = "src/main.rs"

[dependencies]
proc-macro2 = "1.0.93"
quote = "1.0.38"
rand = "0.9.0"
regex = "1.11.1"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"
syn = { version = "2.0.96", features = ["full", "extra-traits"] }
toml = "0.8.19"
walkdir = "2.5.0"
anyhow = "1.0"
chrono = "0.4"
similar = "2.2"
